--- a/index.html
+++ b/index.html
@@ -171,26 +171,52 @@
     </section>
 
     <!-- PROJECTS -->
-    <section id="projects" class="py-5">
+<section id="projects">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col"><h2>My Projects</h2></div>
+          <div class="col">
+            <h2>My Projects</h2>
+          </div>
         </div>
         <div class="row justify-content-center">
-          <!-- Project Cards -->
-          <!-- Ulangi untuk setiap proyek -->
           <div class="col-md-4 mb-3">
             <div class="card">
               <img src="1.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
-                <p class="card-text">Aplikasi Manajemen Toko Berbasis Web (Toko Online)</p>
+                <p class="card-text"> Aplikasi Manajemen Toko Berbasis Web (Toko Online)</p>
+                <p class="card-text">Sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP, dan MySQL. Admin dapat mengelola data barang seperti tambah, edit, hapus, dan cari. Tabel menampilkan nama, keterangan, kategori, harga, dan stok. Desain responsif dilengkapi sidebar, tombol aksi, dan fitur pencarian untuk memudahkan pengelolaan lewat browser.</p>
               </div>
             </div>
           </div>
-          <!-- Tambahkan project lainnya seperti sebelumnya -->
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="5.png" class="card-img-top" alt="project" />
+              <div class="card-body">
+                <p class="card-text">Website Pemesanan Makanan "Feane" Berbasis Web</p>
+                <p class="card-text">Website pemesanan makanan berbasis web yang menampilkan daftar menu seperti pizza, burger, dan kentang goreng. Dibuat dengan HTML, CSS, JavaScript, dan Django, website ini memiliki tampilan responsif dan fitur seperti navigasi menu, pemesanan online, dan keranjang belanja. Aplikasi ini berjalan di localhost dengan URL 127.0.0.1:8000 melalui browser.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="3.jpg" class="card-img-top" alt="project" />
+              <div class="card-body">
+                <p class="card-text">Dashboard Data Siswa Berbasis Web dengan Odoo</p>
+                <p class="card-text">Aplikasi ini adalah dashboard siswa berbasis web yang dikembangkan menggunakan platform Odoo. Admin dapat memantau jumlah siswa laki-laki, perempuan, dan total siswa secara visual. Tampilan mencakup grafik distribusi gender, jurusan teratas, dan jumlah siswa per kelas. Sistem ini berjalan di browser secara efisien dan real-time.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="2.jpg" class="card-img-top" alt="project" />
+              <div class="card-body">
+                <p class="card-text">Aplikasi Jadwal Kuliah Berbasis Web</p>
+                <p class="card-text">Aplikasi ini adalah sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP, dan MySQL. Admin dapat mengelola data barang seperti menambah, mengedit, menghapus. Halaman utama menampilkan tabel barang lengkap dengan nama, keterangan, kategori, harga, dan stok.Tampilan menggunakan desain responsif dengan sidebar navigasi, tombol aksi (edit & hapus), dan fitur pencarian, sehingga memudahkan pengguna dalam mengelola data secara efisien melalui browser.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </section>
 
     <!-- CONTACT -->
     <section id="contact" class="py-5 text-center">
