--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <body id="home">
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Putri Rohmatul Khasanah</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
