--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     body {
       display: flex;
       flex-direction: column;
-      background-color: #ffffff;
+      background-color: #0D5EA6;
       color: #000000;
     }
 
@@ -39,13 +39,13 @@
     }
 
     .jumbotron {
-      background-color: #ffffff;
+      background-color: #0D5EA6;
       color: #000000;
     }
 
     section,
     .contact {
-      background-color: #ffffff;
+      background-color: #0D5EA6;
       color: #000000;
     }
 
@@ -106,7 +106,7 @@
     <section class="jumbotron text-center pt-5 mt-5">
       <img src="ft.jpg" alt="Putri Rohmatul" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Putri Rohmatul</h1>
-      <p class="lead" style="color: #0D5EA6;">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
+      <p class="lead" style="color: blue;">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8">
@@ -224,8 +224,8 @@
     <section id="contact" class="py-5 text-center">
       <div class="container">
         <h2>Kontak</h2>
-        <p class="mt-3" style="color: #0D5EA6;">Jika ingin menghubungi saya, bisa melalui:</p>
-        <p class="mt-3" style="color: #0D5EA6;">Email: putrirohmatul969@email.com<br>No HP: 0895-3233-91087</p>
+        <p class="mt-3" style="color: blue;">Jika ingin menghubungi saya, bisa melalui:</p>
+        <p class="mt-3" style="color: blue;">Email: putrirohmatul969@email.com<br>No HP: 0895-3233-91087</p>
       </div>
     </section>
   </main>
