--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     body {
       display: flex;
       flex-direction: column;
-      background-color: #C68EFD;
+      background-color: #FED2E2;
       color: #000000;
     }
 
@@ -39,13 +39,13 @@
     }
 
     .jumbotron {
-      background-color: #C68EFD;
+      background-color: #FED2E2;
       color: #000000;
     }
 
     section,
     .contact {
-      background-color: #C68EFD;
+      background-color: #FED2E2;
       color: #000000;
     }
 
