--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <img src="1.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text" style="color: blue;"> Aplikasi Manajemen Toko Berbasis Web (Toko Online)</p>
-                <p class="card-text">Sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP, dan MySQL. Admin dapat mengelola data barang seperti tambah, edit, hapus, dan cari. Tabel menampilkan nama, keterangan, kategori, harga, dan stok. Desain responsif dilengkapi sidebar, tombol aksi, dan fitur pencarian untuk memudahkan pengelolaan lewat browser.</p>
+                <p class="card-text" style="color: #8CC0DE;">Sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP, dan MySQL. Admin dapat mengelola data barang seperti tambah, edit, hapus, dan cari. Tabel menampilkan nama, keterangan, kategori, harga, dan stok. Desain responsif dilengkapi sidebar, tombol aksi, dan fitur pencarian untuk memudahkan pengelolaan lewat browser.</p>
               </div>
             </div>
           </div>
@@ -196,7 +196,7 @@
               <img src="5.png" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text" style="color: blue;">Website Pemesanan Makanan "Feane" Berbasis Web</p>
-                <p class="card-text">Website pemesanan makanan berbasis web yang menampilkan daftar menu seperti pizza, burger, dan kentang goreng. Dibuat dengan HTML, CSS, JavaScript, dan Django, website ini memiliki tampilan responsif dan fitur seperti navigasi menu, pemesanan online, dan keranjang belanja. Aplikasi ini berjalan di localhost dengan URL 127.0.0.1:8000 melalui browser.</p>
+                <p class="card-text" style="color: #8CC0DE;">Website pemesanan makanan berbasis web yang menampilkan daftar menu seperti pizza, burger, dan kentang goreng. Dibuat dengan HTML, CSS, JavaScript, dan Django, website ini memiliki tampilan responsif dan fitur seperti navigasi menu, pemesanan online, dan keranjang belanja. Aplikasi ini berjalan di localhost dengan URL 127.0.0.1:8000 melalui browser.</p>
               </div>
             </div>
           </div>
@@ -205,7 +205,7 @@
               <img src="3.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text" style="color: blue;">Dashboard Data Siswa Berbasis Web dengan Odoo</p>
-                <p class="card-text">Aplikasi ini adalah dashboard siswa berbasis web yang dikembangkan menggunakan platform Odoo. Admin dapat memantau jumlah siswa laki-laki, perempuan, dan total siswa secara visual. Tampilan mencakup grafik distribusi gender, jurusan teratas, dan jumlah siswa per kelas. Sistem ini berjalan di browser secara efisien dan real-time.</p>
+                <p class="card-text" style="color: #8CC0DE;">Aplikasi ini adalah dashboard siswa berbasis web yang dikembangkan menggunakan platform Odoo. Admin dapat memantau jumlah siswa laki-laki, perempuan, dan total siswa secara visual. Tampilan mencakup grafik distribusi gender, jurusan teratas, dan jumlah siswa per kelas. Sistem ini berjalan di browser secara efisien dan real-time.</p>
               </div>
             </div>
           </div>
