--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <section class="jumbotron text-center pt-5 mt-5">
       <img src="ft.jpg" alt="Putri Rohmatul" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Putri Rohmatul</h1>
-      <p class="lead" style="color: #7FA1C3;">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
+      <p class="lead" style="color: #3B3486;">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8">
@@ -225,8 +225,8 @@
     <section id="contact" class="py-5 text-center">
       <div class="container">
         <h2>Kontak</h2>
-        <p class="mt-3" style="color: #7FA1C3;">Jika ingin menghubungi saya, bisa melalui:</p>
-        <p class="mt-3" style="color: #7FA1C3;">Email: putrirohmatul969@email.com<br>No HP: 0895-3233-91087</p>
+        <p class="mt-3" style="color: #3B3486;">Jika ingin menghubungi saya, bisa melalui:</p>
+        <p class="mt-3" style="color: #3B3486;">Email: putrirohmatul969@email.com<br>No HP: 0895-3233-91087</p>
       </div>
     </section>
   </main>
