--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
         <div class="row justify-content-center fs-5 align-items-start">
           <div class="col-md-4">
-            <h4 class="text-center">HARD SKILL</h4>
+            <h4 class="text-center" style="color: #3B3486;">HARD SKILL</h4>
             <p>
               ~ Bahasa Pemrograman PHP, Python (Django dasar)<br>
               ~ Web Development: HTML, CSS<br>
@@ -161,7 +161,7 @@
             </p>
           </div>
           <div class="col-md-4">
-            <h4 class="text-center">SOFT SKILL</h4>
+            <h4 class="text-center" style="color: #3B3486;">SOFT SKILL</h4>
             <p>
               ~ Disiplin dan Bertanggung jawab<br>
               ~ Mampu bekerja dalam tim maupun individu<br>
